@@ -1,5 +1,7 @@
 2009-06-23  Glenn Morris  <rgm@gnu.org>
 
+	* pcmpl-rpm.el (pcomplete/rpm): Doc fix.
+
 	* bindings.el (mode-line-modified): Fix case of "Buffer is modified".
 
 	* textmodes/ispell.el (ispell-local-dictionary): Doc fix.
